获取机器人信息